dev server works to phone. dont' allow y scroll

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <body style="background-color: white">
     <div id="map" class="map"></div>
         
-    <div class="scroller" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow-y: scroll; overflow-scrolling: touch; -webkit-overflow-scrolling: touch;">
+    <div class="scroller" style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; overflow-y: hidden; overflow-scrolling: touch; -webkit-overflow-scrolling: touch;">
       <div class="spacer">
         <div class="cta-container">
           <div class="cta">
