add twitter meta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>Subway Platform Slitscan</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <meta property="og:image" content="preview.png"/>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@davidstolarsky" />
+    <meta property="og:title" content="Subway Platform Slitscan"/>
+    <meta property="og:image" content="preview2.png"/>
     <meta property="og:description" content="Slitscan photograph of a New York City subway platform from a moving train"/>
     <link rel="stylesheet" href="ol.css" type="text/css">
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
