add twitter image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@davidstolarsky" />
+    <meta name="twitter:image" content="preview2.png" />
     <meta property="og:title" content="Subway Platform Slitscan"/>
     <meta property="og:image" content="preview2.png"/>
     <meta property="og:description" content="Slitscan photograph of a New York City subway platform from a moving train"/>
