twitter big card!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Subway Platform Slitscan</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@davidstolarsky" />
     <meta name="twitter:image" content="preview2.png" />
     <meta property="og:title" content="Subway Platform Slitscan"/>
