fix meta image urls

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@davidstolarsky" />
-    <meta name="twitter:image" content="https://52a93719.ngrok.io/preview.jpg" />
+    <meta name="twitter:image" content="https://gimlids.github.io/2017/12/24/subway-platform-slitscan-test/preview.jpg" />
     <meta property="og:title" content="Subway Platform Slitscan"/>
-    <meta property="og:image" content="https://52a93719.ngrok.io/preview.jpg"/>
+    <meta property="og:image" content="https://gimlids.github.io/2017/12/24/subway-platform-slitscan-test/preview.jpg"/>
     <meta property="og:description" content="Slitscan photograph of a New York City subway platform from a moving train"/>
     <link rel="stylesheet" href="ol.css" type="text/css">
     <!-- The line below is only needed for old environments like Internet Explorer and Android 4.x -->
